--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "language-inty",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Syntax highlighting for Inty language",
   "engines": {
     "atom": "*"
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kwright02/language-inty.git"
+    "url": "https://github.com/kwright02/language-inty.git"
   },
   "author": "Kwright02",
   "bugs": {
